<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_recherche"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_recherche"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_text"
            android:ems="10"
            android:inputType="text"
            android:text="@string/matricule_par_defaut" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_rechercher_etudiant"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rechercher_info_etudiant"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_nom_etudiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_text"
            android:ems="10"
            android:inputType="text"
            android:text="@string/contenuVide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prenom"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_prenom_etudiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_text"
            android:ems="10"
            android:inputType="text"
            android:text="@string/contenuVide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_naiss"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_dateNais_etudiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telephone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_telephon_etudiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_text"
            android:ems="10"
            android:inputType="text"
            android:text="@string/contenuVide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/et_email_etudiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_text"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/contenuVide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <Button
            android:id="@+id/btn_getCodebar_etudiant"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code_bar" />

        <EditText
            android:id="@+id/et_condeBare_etudiant"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_text"
            android:ems="10"
            android:inputType="text"
            android:text="@string/contenuVide" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/iv_photo_etudiant"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:contentDescription="@string/descrImage" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp" >

        <Button
            android:id="@+id/btn_reset_student"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/effacer"
            android:textColorLink="@android:color/holo_orange_dark" />

        <Button
            android:id="@+id/btn_save_student"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/enregistrer"
            android:textColorLink="@android:color/holo_green_light" />

        <Button
            android:id="@+id/btn_ennuler_regist_student"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/annuler"
            android:textColorLink="@android:color/holo_red_light" />

    </LinearLayout>

</LinearLayout>