<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/info_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="1dp"
        android:text="@string/contenuVide" />
    
	<Button
	    android:id="@+id/btn_scan"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical|center_horizontal|center"
	    android:background="@android:color/holo_green_dark"
	    android:text="@string/btn_sacn" />

	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="20dp"
	    android:text="@string/lib_format" />

	<TextView
	    android:id="@+id/tvScanFormat"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/lib_contents" />

	<TextView
	    android:id="@+id/tvScanContent"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textAppearance="?android:attr/textAppearanceLarge" />

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >

		<Button
		    android:id="@+id/btnAnalyseScan"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/btnAnnalyseScan" />

	</LinearLayout>
    
</LinearLayout>
