<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="60dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/titre_connexion"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/label_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/login"
            android:text="@string/lib_login"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_text"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text="@string/loginpardefaut" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp" >

        <TextView
            android:id="@+id/label_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/password"
            android:text="@string/lib_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/password"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/motdepassepardefaut" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="276dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/btn_send"
            style="@style/AppBaseTheme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@android:color/holo_green_dark"
            android:text="@string/btn_envoyer"
            android:textSize="21sp" />

        <Button
            android:id="@+id/btn_reset"
            style="@style/AppTheme"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:background="@android:color/holo_orange_dark"
            android:text="@string/btn_reset"
            android:textSize="22sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarConnexion"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal|center"
        android:layout_marginTop="20dp" />

</LinearLayout>